--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.13.0",
     "firebase": "^11.6.0",
     "next": "15.2.4",
     "react": "^19.0.0",
