--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@clerk/nextjs": "^6.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@google/genai": "^0.7.0",
+    "@google/generative-ai": "^0.24.0",
     "@mui/material": "^7.0.1",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
     "firebase": "^11.6.0",
     "next": "15.2.4",
     "react": "^19.0.0",
