--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^6.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/poppins": "^5.2.5",
     "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.0",
     "@mui/material": "^7.0.1",
