--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.13.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fontsource/fredoka": "^5.2.6",
     "@fontsource/inria-serif": "^5.2.5",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
@@ -21,6 +22,7 @@
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
+    "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
