--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google/genai": "^0.7.0",
     "@google/generative-ai": "^0.24.0",
     "@mui/material": "^7.0.1",
+    "@next/third-parties": "^15.2.4",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
