--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google/generative-ai": "^0.24.0",
     "@mui/material": "^7.0.1",
     "@next/third-parties": "^15.2.4",
+    "@vercel/analytics": "^1.5.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
